<resources>
    <string name="app_name">Strength</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>

    <!-- home -->
    <string name="program_title_home" translatable="true">Current Program: </string>
    <string name="completion" translatable="true">Completion: </string>
    <string name="days30" translatable="true">30 Days</string>
    <string name="days60" translatable="true">60 Days</string>
    <string name="days120" translatable="true">120 Days</string>
    <string name="oneyear" translatable="true">One Year</string>
    <string name="exercise" translatable="true">Exercise</string>
    <string name="projection" translatable="true">Projected 1RM</string>

    <!-- Settings Menu -->
    <string name="action_settings" translatable="true">1RM Calculator</string>
    <string name="action_test_data">Insert Test data</string>

    <!-- Bottom Navication Bar -->
    <string name="back">BACK</string>
    <string name="complete">COMPLETE</string>
    <string name="forward">FORWARD</string>

    <!-- Exercise Titles -->
    <string name="sets" translatable="true">Sets:</string>
    <string name="reps" translatable="true">Reps:</string>
    <string name="bodyweight" translatable="true">Body Weight</string>
    <string name="weight" translatable="true">Weight:</string>
    <string name="note" translatable="true">Note</string>
    <string name="time" translatable="true">Time</string>
    <string name="completed" translatable="true">Completed on:</string>

    <!-- Programs -->
    <string name="title_duration" translatable="true">Duration:</string>
    <string name="title_difficulty" translatable="true">Difficulty:</string>
    <string name="title_author" translatable="true">Author:</string>

    <string name="amrap" translatable="false">AMRAP</string>
    <string name="hint_text" translatable="true">Amrap Result</string>

    <string name="save" translatable="true">save</string>

    <!-- Widget -->
    <string name="program_title" translatable="true">Program </string>
    <string name="week_title" translatable="true">Workout Nr </string>
    <string name="add_widget">Add widget</string>

    <!-- Stats Activity -->
    <string name="first_run_toast">Lets start by entering your current best lifts</string>
    <string name="save_squat">Saved 1RM Squat</string>
    <string name="save_bench">Saved 1RM Bench</string>
    <string name="save_dead">Saved 1RM Dead</string>
    <string name="save_press">Saved 1RM Military Press</string>
    <string name="error_not_empty">not empty</string>
    <string name="hint_reps" translatable="true">Reps</string>
    <string name="hint_weight" translatable="true">Weight</string>
    <string name="hint_bodyweight" translatable="true">Body Weight</string>
    <string name="military_press">Military Press</string>
    <string name="deadlift">Deadlift</string>
    <string name="benchpress">Bench Press</string>
    <string name="squat">Squat</string>
    <string name="one_rep_max_calc" translatable="true">One Rep Max Calculator</string>
</resources>
