<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="4dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="4dp"
    android:layout_marginBottom="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/nameView"
                style="@style/mainTitleTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/setsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/subTitleTextStyle"
                android:text="@string/sets" />

            <TextView
                android:id="@+id/setsView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/bodyTextStyle"
                android:paddingStart="5dp"
                android:paddingEnd="10dp"/>

            <TextView
                android:id="@+id/repsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/subTitleTextStyle"
                android:text="@string/reps"/>

            <TextView
                android:id="@+id/repsView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/bodyTextStyle"
                android:paddingStart="5dp"
                android:paddingEnd="10dp"/>

            <TextView
                android:id="@+id/weightTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/subTitleTextStyle"
                android:text="@string/weight" />
            <TextView
                android:id="@+id/weightView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/bodyTextStyle"
                android:paddingStart="5dp"
                android:paddingEnd="10dp"/>

            <TextView
                android:id="@+id/timeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/subTitleTextStyle"
                android:text="@string/time" />
            <TextView
                android:id="@+id/timeView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/bodyTextStyle"
                android:paddingStart="5dp"
                android:paddingEnd="10dp"/>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_text">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputText"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/noteView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/completeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/completed"
                />
            <TextView
                android:id="@+id/completeView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="5dp"
                android:paddingStart="5dp"
                />

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>